--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.1.0
+version: 1.1.1
 history:
+  1.1.1:
+    date: '2020-11-23'
+    title: 'Count'
+    description: 'Not always one want to have count column. Add checkbox Skip count.'
   1.1.0:
     date: '2020-11-23'
     title: 'Post data'
