--- a/manifest.yml
+++ b/manifest.yml
@@ -2,7 +2,7 @@ version: 1.1.1
 history:
   1.1.1:
     date: '2020-11-23'
-    title: 'Count'
+    title: Count
     description: 'Not always one want to have count column. Add checkbox Skip count.'
   1.1.0:
     date: '2020-11-23'
@@ -15,7 +15,7 @@ history:
 plugin:
   -
     name: wf/yml
-    version: 1.2.2
+    version: 1.3.0
   -
     name: theme/include
     version: 1.7.1
