--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.1.1
+version: 1.1.2
 history:
+  1.1.2:
+    date: '2022-02-26'
+    title: Versions
+    description: 'Versions update.'
   1.1.1:
     date: '2020-11-23'
     title: Count
@@ -15,10 +19,10 @@ history:
 plugin:
   -
     name: wf/yml
-    version: 1.3.0
+    version: 1.3.1
   -
     name: theme/include
-    version: 1.8.0
+    version: 1.9.0
 sys:
   -
     name: mercury
