--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.1.2
+version: 1.1.3
 history:
+  1.1.3:
+    date: '2022-05-02'
+    title: Versions
+    description: 'Versions update.'
   1.1.2:
     date: '2022-02-26'
     title: Versions
@@ -22,7 +26,7 @@ plugin:
     version: 1.3.1
   -
     name: theme/include
-    version: 1.9.0
+    version: 1.10.0
 sys:
   -
     name: mercury
