--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.1.3
+version: 1.1.4
 history:
+  1.1.4:
+    date: '2022-06-07'
+    title: Versions
+    description: 'Versions update.'
   1.1.3:
     date: '2022-05-02'
     title: Versions
@@ -23,10 +27,10 @@ history:
 plugin:
   -
     name: wf/yml
-    version: 1.3.1
+    version: 1.4.0
   -
     name: theme/include
-    version: 1.10.0
+    version: 1.10.5
 sys:
   -
     name: mercury
