--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.1.4
+version: 1.1.5
 history:
+  1.1.5:
+    date: '2022-08-11'
+    title: Versions
+    description: 'Versions update.'
   1.1.4:
     date: '2022-06-07'
     title: Versions
@@ -30,7 +34,7 @@ plugin:
     version: 1.4.0
   -
     name: theme/include
-    version: 1.10.5
+    version: 1.11.0
 sys:
   -
     name: mercury
