--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.1.5
+version: 1.1.6
 history:
+  1.1.6:
+    date: '2022-08-31'
+    title: Versions
+    description: 'Versions update.'
   1.1.5:
     date: '2022-08-11'
     title: Versions
@@ -31,10 +35,10 @@ history:
 plugin:
   -
     name: wf/yml
-    version: 1.4.0
+    version: 1.4.1
   -
     name: theme/include
-    version: 1.11.0
+    version: 1.13.0
 sys:
   -
     name: mercury
