--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.1.6
+version: 1.1.7
 history:
+  1.1.7:
+    date: '2022-08-31'
+    title: Versions
+    description: 'Versions update.'
   1.1.6:
     date: '2022-08-31'
     title: Versions
@@ -38,7 +42,7 @@ plugin:
     version: 1.4.1
   -
     name: theme/include
-    version: 1.13.0
+    version: 1.14.0
 sys:
   -
     name: mercury
