--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.1.7
+version: 1.1.8
 history:
+  1.1.8:
+    date: '2022-09-27'
+    title: Versions
+    description: 'Versions update.'
   1.1.7:
     date: '2022-08-31'
     title: Versions
@@ -39,10 +43,10 @@ history:
 plugin:
   -
     name: wf/yml
-    version: 1.4.1
+    version: 1.5.0
   -
     name: theme/include
-    version: 1.14.0
+    version: 1.14.1
 sys:
   -
     name: mercury
