--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.1.8
+version: 1.1.9
 history:
+  1.1.9:
+    date: '2023-01-02'
+    title: Versions
+    description: 'Versions update.'
   1.1.8:
     date: '2022-09-27'
     title: Versions
@@ -43,10 +47,10 @@ history:
 plugin:
   -
     name: wf/yml
-    version: 1.5.0
+    version: 1.5.1
   -
     name: theme/include
-    version: 1.14.1
+    version: 1.16.0
 sys:
   -
     name: mercury
