--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.1.9
+version: 1.1.10
 history:
+  1.1.10:
+    date: '2023-03-22'
+    title: Versions
+    description: 'Versions update.'
   1.1.9:
     date: '2023-01-02'
     title: Versions
@@ -50,7 +54,7 @@ plugin:
     version: 1.5.1
   -
     name: theme/include
-    version: 1.16.0
+    version: 1.17.0
 sys:
   -
     name: mercury
