--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.1.10
+version: 1.1.11
 history:
+  1.1.11:
+    date: '2023-03-27'
+    title: Versions
+    description: 'Versions update.'
   1.1.10:
     date: '2023-03-22'
     title: Versions
@@ -54,7 +58,7 @@ plugin:
     version: 1.5.1
   -
     name: theme/include
-    version: 1.17.0
+    version: 1.19.0
 sys:
   -
     name: mercury
