--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.1.11
+version: 1.1.12
 history:
+  1.1.12:
+    date: '2023-04-14'
+    title: Versions
+    description: 'Versions update.'
   1.1.11:
     date: '2023-03-27'
     title: Versions
@@ -58,7 +62,7 @@ plugin:
     version: 1.5.1
   -
     name: theme/include
-    version: 1.19.0
+    version: 1.20.0
 sys:
   -
     name: mercury
