--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.1.13
+version: 1.1.14
 history:
+  1.1.14:
+    date: '2023-09-27'
+    title: Versions
+    description: 'Versions update.'
   1.1.13:
     date: '2023-09-11'
     title: Versions
@@ -63,10 +67,10 @@ history:
 plugin:
   -
     name: wf/yml
-    version: 1.8.0
+    version: 1.8.1
   -
     name: theme/include
-    version: 1.20.4
+    version: 1.21.0
 sys:
   -
     name: mercury
