--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.1.14
+version: 1.1.15
 history:
+  1.1.15:
+    date: '2023-12-13'
+    title: Form
+    description: 'Form action settings.'
   1.1.14:
     date: '2023-09-27'
     title: Versions
